--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-binary-${{ matrix.target }}
+          name: linux-${{ matrix.target }}
           path: release/linux-${{ matrix.target }}.tar.gz
 
   build-macos:
@@ -68,7 +68,7 @@ jobs:
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macos-binary-${{ matrix.target }}
+          name: macos-${{ matrix.target }}
           path: release/macos-${{ matrix.target }}.tar.gz
 
   create-release:
@@ -76,25 +76,25 @@ jobs:
     needs: [build-linux, build-macos]
     runs-on: ubuntu-latest
     steps:
-      - name: Download Linux artifacts
+      - name: Download Linux x86_64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-binary-x86_64-unknown-linux-gnu
+          name: linux-x86_64-unknown-linux-gnu
           path: artifacts/linux/x86_64
-      - name: Download macOS artifacts
+      - name: Download macOS x86_64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: macos-binary-x86_64-apple-darwin
+          name: macos-x86_64-apple-darwin
           path: artifacts/macos/x86_64
-      - name: Download ARM Linux artifacts
+      - name: Download Linux aarch64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-binary-aarch64-unknown-linux-gnu
+          name: linux-aarch64-unknown-linux-gnu
           path: artifacts/linux/aarch64
-      - name: Download ARM macOS artifacts
+      - name: Download macOS aarch64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: macos-binary-aarch64-apple-darwin
+          name: macos-aarch64-apple-darwin
           path: artifacts/macos/aarch64
 
       - name: Create GitHub Release
