--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,149 +1,62 @@
-name: Release Build
+name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags: ['v*']
 
 jobs:
-  build-linux:
-    name: "Build for Linux (${{ matrix.target }})"
-    runs-on: ubuntu-latest
+  build:
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-gnu]
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: macos-latest
+            target: aarch64-apple-darwin
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          profile: minimal
-          override: true
           target: ${{ matrix.target }}
-
-      - name: Build for Linux (${{ matrix.target }})
+      
+      - name: Build
         run: cargo build --release --target ${{ matrix.target }}
-
-      - name: Create Linux artifact
+      
+      - name: Package artifact
         run: |
           mkdir -p release
-          cp target/${{ matrix.target }}/release/zone-transfer release/zone-transfer-linux-${{ matrix.target }}
-          tar -czvf release/linux-${{ matrix.target }}.tar.gz release/zone-transfer-linux-${{ matrix.target }}
-
-      - name: Upload Linux artifact
-        uses: actions/upload-artifact@v4
+          cp target/${{ matrix.target }}/release/zone-transfer release/
+          tar -czvf release/${{ matrix.target }}.tar.gz -C release zone-transfer
+      
+      - uses: actions/upload-artifact@v4
         with:
-          name: linux-${{ matrix.target }}
-          path: release/linux-${{ matrix.target }}.tar.gz
+          name: ${{ matrix.target }}
+          path: release/${{ matrix.target }}.tar.gz
 
-  build-macos:
-    name: "Build for macOS (${{ matrix.target }})"
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        target: [x86_64-apple-darwin]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-          target: ${{ matrix.target }}
-
-      - name: Build for macOS (${{ matrix.target }})
-        run: cargo build --release --target ${{ matrix.target }}
-
-      - name: Create macOS artifact
-        run: |
-          mkdir -p release
-          cp target/${{ matrix.target }}/release/zone-transfer release/zone-transfer-macos-${{ matrix.target }}
-          tar -czvf release/macos-${{ matrix.target }}.tar.gz release/zone-transfer-macos-${{ matrix.target }}
-
-      - name: Upload macOS artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-${{ matrix.target }}
-          path: release/macos-${{ matrix.target }}.tar.gz
-
-  create-release:
-    name: "Create Release and Upload Artifacts"
-    needs: [build-linux, build-macos]
+  release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Linux x86_64 artifact
+      - uses: actions/checkout@v4
+      
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: linux-x86_64-unknown-linux-gnu
-          path: artifacts/linux/x86_64
-      - name: Download macOS x86_64 artifact
-        uses: actions/download-artifact@v4
+          path: artifacts
+      
+      - name: Extract artifacts
+        run: |
+          find artifacts -name '*.tar.gz' -exec tar -xzvf {} -C artifacts \;
+      
+      - uses: softprops/action-gh-release@v1
         with:
-          name: macos-x86_64-apple-darwin
-          path: artifacts/macos/x86_64
-      - name: Download Linux aarch64 artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-aarch64-unknown-linux-gnu
-          path: artifacts/linux/aarch64
-      - name: Download macOS aarch64 artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-aarch64-apple-darwin
-          path: artifacts/macos/aarch64
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: "Release ${{ github.ref_name }}"
+          files: |
+            artifacts/*/zone-transfer
           draft: false
-          prerelease: false
-
-      - name: Upload x86 Linux binary to Release
-        uses: actions/upload-release-asset@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/linux/x86_64/linux-x86_64-unknown-linux-gnu.tar.gz
-          asset_name: zone-transfer-linux-x86_64-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload ARM Linux binary to Release
-        uses: actions/upload-release-asset@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/linux/aarch64/linux-aarch64-unknown-linux-gnu.tar.gz
-          asset_name: zone-transfer-linux-aarch64-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload x86 macOS binary to Release
-        uses: actions/upload-release-asset@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/macos/x86_64/macos-x86_64-apple-darwin.tar.gz
-          asset_name: zone-transfer-macos-x86_64-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload ARM macOS binary to Release
-        uses: actions/upload-release-asset@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/macos/aarch64/macos-aarch64-apple-darwin.tar.gz
-          asset_name: zone-transfer-macos-aarch64-${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
