--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
       
+      - name: Verify build output
+        run: ls -la target/${{ matrix.target }}/release/
+      
       - name: Package artifact
         run: |
           mkdir -p release
@@ -47,17 +50,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Create artifacts directory
+        run: mkdir -p artifacts
+      
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
-          pattern: '*.tar.gz'
-          merge-multiple: true
       
-      - name: Extract artifacts
+      - name: List downloaded artifacts
+        run: ls -la artifacts/
+      
+      - name: Prepare release assets
         run: |
           mkdir -p dist
-          find artifacts -name '*.tar.gz' -exec tar -xzvf {} -C dist \;
+          for f in artifacts/*.tar.gz; do
+            tar -xzvf "$f" -C dist
+          done
       
       - uses: softprops/action-gh-release@v1
         env:
