--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,10 @@ jobs:
         include:
           - target: x86_64-apple-darwin
             artifact_name: macos-x86_64
+            output_name: zone-transfer-rs-x86_64-apple-darwin
           - target: aarch64-apple-darwin  
             artifact_name: macos-arm64
+            output_name: zone-transfer-rs-aarch64-apple-darwin
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,7 +33,7 @@ jobs:
       - name: Prepare artifact
         run: |
           mkdir -p release/${{ matrix.artifact_name }}
-          cp target/${{ matrix.target }}/release/zone-transfer-rs release/${{ matrix.artifact_name }}/
+          cp target/${{ matrix.target }}/release/zone-transfer-rs release/${{ matrix.artifact_name }}/${{ matrix.output_name }}
       
       - uses: actions/upload-artifact@v4
         with:
@@ -51,13 +53,16 @@ jobs:
         with:
           path: dist
       
-      - name: List release assets
-        run: find dist -type f
+      - name: Rename assets
+        run: |
+          mkdir -p release_assets
+          cp dist/macos-x86_64/zone-transfer-rs-x86_64-apple-darwin release_assets/
+          cp dist/macos-arm64/zone-transfer-rs-aarch64-apple-darwin release_assets/
       
       - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: |
-            dist/**/zone-transfer-rs
+            release_assets/*
           draft: false
