--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,15 @@ jobs:
           - target: x86_64-apple-darwin
             artifact_name: macos-x86_64
             output_name: zone-transfer-rs-x86_64-apple-darwin
-          - target: aarch64-apple-darwin  
+          - target: aarch64-apple-darwin
             artifact_name: macos-arm64
             output_name: zone-transfer-rs-aarch64-apple-darwin
+          - target: x86_64-unknown-linux-gnu
+            artifact_name: linux-x86_64
+            output_name: zone-transfer-rs-x86_64-unknown-linux-gnu
+          - target: aarch64-unknown-linux-gnu
+            artifact_name: linux-arm64
+            output_name: zone-transfer-rs-aarch64-unknown-linux-gnu
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -27,8 +33,17 @@ jobs:
         with:
           target: ${{ matrix.target }}
       
+      - name: Install cross (Linux only)
+        if: contains(matrix.target, 'linux')
+        run: cargo install cross
+
       - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
+        run: |
+          if [[ "${{ matrix.target }}" == *"linux"* ]]; then
+            cross build --release --target ${{ matrix.target }}
+          else
+            cargo build --release --target ${{ matrix.target }}
+          fi
       
       - name: Prepare artifact
         run: |
@@ -58,6 +73,8 @@ jobs:
           mkdir -p release_assets
           cp dist/macos-x86_64/zone-transfer-rs-x86_64-apple-darwin release_assets/
           cp dist/macos-arm64/zone-transfer-rs-aarch64-apple-darwin release_assets/
+          cp dist/linux-x86_64/zone-transfer-rs-x86_64-unknown-linux-gnu release_assets/
+          cp dist/linux-arm64/zone-transfer-rs-aarch64-unknown-linux-gnu release_assets/
       
       - uses: softprops/action-gh-release@v1
         env:
