--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,20 +33,16 @@ jobs:
         with:
           target: ${{ matrix.target }}
       
-      - name: Setup Rust target (Linux only)
-        if: contains(matrix.target, 'linux')
-        run: rustup target add ${{ matrix.target }}
-
       - name: Install cross (Linux only)
         if: contains(matrix.target, 'linux')
-        run: cargo install cross
+        uses: taiki-e/install-action@cross
 
       - name: Build
         run: |
           if [[ "${{ matrix.target }}" == *"linux"* ]]; then
-            cross build --release --target ${{ matrix.target }}
+            cross build --release --locked --target ${{ matrix.target }}
           else
-            cargo build --release --target ${{ matrix.target }}
+            cargo build --release --locked --target ${{ matrix.target }}
           fi
       
       - name: Prepare artifact
