--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             artifact_name: linux-x86_64
             output_name: zone-transfer-rs-x86_64-unknown-linux-gnu
-            
+
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -29,11 +29,7 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          target: ${{ matrix.target }}
-      
-      - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
+          toolchain: stable
           target: ${{ matrix.target }}
 
       - name: Install cross (Linux only)
