--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,71 +4,36 @@ on:
   push:
     tags: ['v*.*.*']
 
-env:
-  CARGO_TERM_COLOR: always
+permissions:
+  contents: write
 
 jobs:
-  build:
+  create-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-assets:
+    needs: create-release
     strategy:
       matrix:
         include:
           - target: x86_64-apple-darwin
-            artifact_name: macos-x86_64
-            output_name: zone-transfer-rs-x86_64-apple-darwin
-          - target: aarch64-apple-darwin
-            artifact_name: macos-arm64
-            output_name: zone-transfer-rs-aarch64-apple-darwin
+            os: macos-latest
+          - target: aarch64-apple-darwin  
+            os: macos-latest
           - target: x86_64-unknown-linux-gnu
-            artifact_name: linux-x86_64
-            output_name: zone-transfer-rs-x86_64-unknown-linux-gnu
-
-    runs-on: macos-latest
+            os: ubuntu-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          toolchain: stable
+          bin: zone-transfer-rs
           target: ${{ matrix.target }}
-
-      - name: Build
-        run: cargo build --release --locked --target ${{ matrix.target }}
-      
-      - name: Prepare artifact
-        run: |
-          mkdir -p release/${{ matrix.artifact_name }}
-          cp target/${{ matrix.target }}/release/zone-transfer-rs release/${{ matrix.artifact_name }}/${{ matrix.output_name }}
-      
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.artifact_name }}
-          path: release/${{ matrix.artifact_name }}
-
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-      
-      - name: Rename assets
-        run: |
-          mkdir -p release_assets
-          cp dist/macos-x86_64/zone-transfer-rs-x86_64-apple-darwin release_assets/
-          cp dist/macos-arm64/zone-transfer-rs-aarch64-apple-darwin release_assets/
-          cp dist/linux-x86_64/zone-transfer-rs-x86_64-unknown-linux-gnu release_assets/
-      
-      - uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: |
-            release_assets/*
-          draft: false
+          token: ${{ secrets.GITHUB_TOKEN }}
